--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/rajulkoshta/"><img src="images/linkedin.png" alt="icon"></a>
         </li>
     </ul>
-    <p>© | 2021 | RajulKoshta</p>
+    <p>© | 2021 |<a class="link" href="https://rajulkoshtaportfolio.netlify.app/"> RajulKoshta</a></p>
     </footer>
 
     <script src="app.js"></script>
